--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ li {
 }
 .header {
     background-color: #053750;
-    height: 150px;
+    height: 110px;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -48,20 +48,21 @@ li {
     text-transform: capitalize;
     position: relative;
     border: #E3E3E5 2px solid;
-    padding: 25px 110px;
+    padding: 20px 110px;
 }
 
 .header__subtitle {
     text-transform: capitalize;
     position: absolute;
     background-color: #053750;
-    top: 81px;
+    top: 56px;
 }
-.aboute{
-    padding: 10px 50px;
+.about{
+    padding: 0 25px;
     border-bottom: #053750 2px solid;
     border-top: #053750 2px solid;
-    margin: 10px 0;
+    margin: 5px 0;
+    text-align: justify;
 }
 .main-content{
     display: flex;
@@ -121,7 +122,7 @@ li {
     padding: 5px 50px;
     border-bottom-right-radius: 50%;
     border-top-right-radius: 50%;
-    width: 75%;
+    width: 65%;
     margin-left: -20px;
     color: #E3E3E5;
 }
@@ -157,9 +158,9 @@ li {
 
 /* .project {} */
 
-.project__title {
+/* .project__title {
     width: 100%;
-}
+} */
 .project-list{
     display: grid;
     grid-template-columns: 1fr 1fr;
